update some pyc file

--- a/news.txt
+++ b/news.txt
@@ -1,3 +1,5 @@
+2016-4-17 22:34:22 |	日发精机（002520）高送超预期，2016年利润预计增长108.07%
+2016-4-17 22:21:10 |	日本再次地震 手机CMOS传感器货出现短缺
 2016-4-15 14:37:45 |	日发精机(002520)：日发航空装备是国内极少数企业化的飞机数字化装配供应商
 2016-4-15 11:23:30 |	在线教育初创公司Claned频获巨额融资
 2016-4-15 10:38:15 |	康得新持续5年的开发裸眼3D技术
@@ -6,5 +8,3 @@
 2016-4-13 10:46:20 |	2025年物理联接超1000亿 华为推五大IoT解决方案
 2016-4-12 14:45:58 |	雅安投资说明会11日亮相成都 东方园林（002310）现场签约100亿元
 2016-4-12 11:15:05 |	上海电力：迪士尼园区内首座城市快充站投运
-2016-4-11 13:43:05 |	上海建工：承建的太湖龙之梦乐园项目近日开工
-2016-4-10 23:20:05 |	圆通速递拟作价175亿借壳上市，快递物流概念将受到提振
